lab5_2/src/main.output
Terminals unused in grammar

   FOR
   RETURN
   POINT
   LBRACK
   RBRACK
   BOOL
   GET_VALUE


State 58 conflicts: 1 shift/reduce
State 66 conflicts: 13 reduce/reduce
State 78 conflicts: 12 shift/reduce
State 117 conflicts: 12 shift/reduce


Grammar

    0 $accept: program $end

    1 program: statements

    2 statements: statement
    3           | statements statement
    4           | LBRACE statements RBRACE
    5           | LBRACE RBRACE

    6 statement: SEMICOLON
    7          | declaration SEMICOLON
    8          | assign SEMICOLON
    9          | if_else
   10          | while
   11          | printf SEMICOLON
   12          | scanf SEMICOLON
   13          | function_decl SEMICOLON
   14          | function_def
   15          | function_use SEMICOLON

   16 function_decl: T IDENTIFIER LPAREN RPAREN
   17              | T IDENTIFIER LPAREN params RPAREN

   18 function_def: T IDENTIFIER LPAREN params RPAREN LBRACE statements RBRACE

   19 function_use: IDENTIFIER LPAREN idlist RPAREN
   20             | IDENTIFIER LPAREN RPAREN

   21 params: params COMMA param
   22       | param

   23 param: T IDENTIFIER

   24 printf: PRINTF LPAREN STRING RPAREN
   25       | PRINTF LPAREN STRING COMMA exprs RPAREN

   26 scanf: SCANF LPAREN STRING COMMA address_idlist RPAREN

   27 address_idlist: address_idlist COMMA get_address_id
   28               | get_address_id

   29 get_address_id: GET_ADDRESS IDENTIFIER

   30 while: WHILE bool_statements statements

   31 if_else: IF bool_statements statements ELSE statements
   32        | IF bool_statements statement

   33 bool_statements: LPAREN bool_statements RPAREN
   34                | bool_statements AND bool_statements
   35                | bool_statements OR bool_statements
   36                | NOT bool_statements
   37                | bool_statement

   38 bool_statement: expr
   39               | bool_statement GREAT bool_statement
   40               | bool_statement LESS bool_statement
   41               | bool_statement GREAT_EQ bool_statement
   42               | bool_statement LESS_EQ bool_statement
   43               | bool_statement LOP_EQ bool_statement
   44               | bool_statement NOT_EQ bool_statement

   45 declaration: T assigns
   46            | T idlist

   47 assigns: assigns COMMA assign
   48        | assign

   49 assign: IDENTIFIER LOP_ASSIGN expr

   50 idlist: idlist COMMA IDENTIFIER
   51       | IDENTIFIER

   52 exprs: exprs COMMA expr
   53      | expr

   54 expr: LPAREN expr RPAREN
   55     | expr ADD expr
   56     | expr SUB expr
   57     | SUB expr
   58     | ADD expr
   59     | expr MUL expr
   60     | expr DIV expr
   61     | expr MOD expr
   62     | IDENTIFIER
   63     | INTEGER
   64     | CHAR
   65     | STRING

   66 T: T_INT
   67  | T_CHAR
   68  | T_BOOL
   69  | T_STRING
   70  | T_INT_POINTER
   71  | T_CHAR_POINTER


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 31 32
ELSE (259) 31
WHILE (260) 30
FOR (261)
RETURN (262)
T_CHAR (263) 67
T_INT (264) 66
T_STRING (265) 69
T_BOOL (266) 68
T_INT_POINTER (267) 70
T_CHAR_POINTER (268) 71
PRINTF (269) 24 25
SCANF (270) 26
LOP_ASSIGN (271) 49
SEMICOLON (272) 6 7 8 11 12 13 15
COMMA (273) 21 25 26 27 47 50 52
POINT (274)
LPAREN (275) 16 17 18 19 20 24 25 26 33 54
RPAREN (276) 16 17 18 19 20 24 25 26 33 54
LBRACK (277)
RBRACK (278)
LBRACE (279) 4 5 18
RBRACE (280) 4 5 18
IDENTIFIER (281) 16 17 18 19 20 23 29 49 50 51 62
INTEGER (282) 63
CHAR (283) 64
BOOL (284)
STRING (285) 24 25 26 65
LOP_EQ (286) 43
GREAT (287) 39
LESS (288) 40
GREAT_EQ (289) 41
LESS_EQ (290) 42
NOT_EQ (291) 44
ADD (292) 55 58
SUB (293) 56 57
MUL (294) 59
DIV (295) 60
MOD (296) 61
OR (297) 35
AND (298) 34
NOT (299) 36
NEG (300)
POS (301)
GET_ADDRESS (302) 29
GET_VALUE (303)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
program (50)
    on left: 1, on right: 0
statements (51)
    on left: 2 3 4 5, on right: 1 3 4 18 30 31
statement (52)
    on left: 6 7 8 9 10 11 12 13 14 15, on right: 2 3 32
function_decl (53)
    on left: 16 17, on right: 13
function_def (54)
    on left: 18, on right: 14
function_use (55)
    on left: 19 20, on right: 15
params (56)
    on left: 21 22, on right: 17 18 21
param (57)
    on left: 23, on right: 21 22
printf (58)
    on left: 24 25, on right: 11
scanf (59)
    on left: 26, on right: 12
address_idlist (60)
    on left: 27 28, on right: 26 27
get_address_id (61)
    on left: 29, on right: 27 28
while (62)
    on left: 30, on right: 10
if_else (63)
    on left: 31 32, on right: 9
bool_statements (64)
    on left: 33 34 35 36 37, on right: 30 31 32 33 34 35 36
bool_statement (65)
    on left: 38 39 40 41 42 43 44, on right: 37 39 40 41 42 43 44
declaration (66)
    on left: 45 46, on right: 7
assigns (67)
    on left: 47 48, on right: 45 47
assign (68)
    on left: 49, on right: 8 47 48
idlist (69)
    on left: 50 51, on right: 19 46 50
exprs (70)
    on left: 52 53, on right: 25 52
expr (71)
    on left: 54 55 56 57 58 59 60 61 62 63 64 65, on right: 38 49 52
    53 54 55 56 57 58 59 60 61
T (72)
    on left: 66 67 68 69 70 71, on right: 16 17 18 23 45 46


State 0

    0 $accept: . program $end

    IF              shift, and go to state 1
    WHILE           shift, and go to state 2
    T_CHAR          shift, and go to state 3
    T_INT           shift, and go to state 4
    T_STRING        shift, and go to state 5
    T_BOOL          shift, and go to state 6
    T_INT_POINTER   shift, and go to state 7
    T_CHAR_POINTER  shift, and go to state 8
    PRINTF          shift, and go to state 9
    SCANF           shift, and go to state 10
    SEMICOLON       shift, and go to state 11
    LBRACE          shift, and go to state 12
    IDENTIFIER      shift, and go to state 13

    program        go to state 14
    statements     go to state 15
    statement      go to state 16
    function_decl  go to state 17
    function_def   go to state 18
    function_use   go to state 19
    printf         go to state 20
    scanf          go to state 21
    while          go to state 22
    if_else        go to state 23
    declaration    go to state 24
    assign         go to state 25
    T              go to state 26


State 1

   31 if_else: IF . bool_statements statements ELSE statements
   32        | IF . bool_statements statement

    LPAREN      shift, and go to state 27
    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 29
    CHAR        shift, and go to state 30
    STRING      shift, and go to state 31
    ADD         shift, and go to state 32
    SUB         shift, and go to state 33
    NOT         shift, and go to state 34

    bool_statements  go to state 35
    bool_statement   go to state 36
    expr             go to state 37


State 2

   30 while: WHILE . bool_statements statements

    LPAREN      shift, and go to state 27
    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 29
    CHAR        shift, and go to state 30
    STRING      shift, and go to state 31
    ADD         shift, and go to state 32
    SUB         shift, and go to state 33
    NOT         shift, and go to state 34

    bool_statements  go to state 38
    bool_statement   go to state 36
    expr             go to state 37


State 3

   67 T: T_CHAR .

    $default  reduce using rule 67 (T)


State 4

   66 T: T_INT .

    $default  reduce using rule 66 (T)


State 5

   69 T: T_STRING .

    $default  reduce using rule 69 (T)


State 6

   68 T: T_BOOL .

    $default  reduce using rule 68 (T)


State 7

   70 T: T_INT_POINTER .

    $default  reduce using rule 70 (T)


State 8

   71 T: T_CHAR_POINTER .

    $default  reduce using rule 71 (T)


State 9

   24 printf: PRINTF . LPAREN STRING RPAREN
   25       | PRINTF . LPAREN STRING COMMA exprs RPAREN

    LPAREN  shift, and go to state 39


State 10

   26 scanf: SCANF . LPAREN STRING COMMA address_idlist RPAREN

    LPAREN  shift, and go to state 40


State 11

    6 statement: SEMICOLON .

    $default  reduce using rule 6 (statement)


State 12

    4 statements: LBRACE . statements RBRACE
    5           | LBRACE . RBRACE

    IF              shift, and go to state 1
    WHILE           shift, and go to state 2
    T_CHAR          shift, and go to state 3
    T_INT           shift, and go to state 4
    T_STRING        shift, and go to state 5
    T_BOOL          shift, and go to state 6
    T_INT_POINTER   shift, and go to state 7
    T_CHAR_POINTER  shift, and go to state 8
    PRINTF          shift, and go to state 9
    SCANF           shift, and go to state 10
    SEMICOLON       shift, and go to state 11
    LBRACE          shift, and go to state 12
    RBRACE          shift, and go to state 41
    IDENTIFIER      shift, and go to state 13

    statements     go to state 42
    statement      go to state 16
    function_decl  go to state 17
    function_def   go to state 18
    function_use   go to state 19
    printf         go to state 20
    scanf          go to state 21
    while          go to state 22
    if_else        go to state 23
    declaration    go to state 24
    assign         go to state 25
    T              go to state 26


State 13

   19 function_use: IDENTIFIER . LPAREN idlist RPAREN
   20             | IDENTIFIER . LPAREN RPAREN
   49 assign: IDENTIFIER . LOP_ASSIGN expr

    LOP_ASSIGN  shift, and go to state 43
    LPAREN      shift, and go to state 44


State 14

    0 $accept: program . $end

    $end  shift, and go to state 45


State 15

    1 program: statements .
    3 statements: statements . statement

    IF              shift, and go to state 1
    WHILE           shift, and go to state 2
    T_CHAR          shift, and go to state 3
    T_INT           shift, and go to state 4
    T_STRING        shift, and go to state 5
    T_BOOL          shift, and go to state 6
    T_INT_POINTER   shift, and go to state 7
    T_CHAR_POINTER  shift, and go to state 8
    PRINTF          shift, and go to state 9
    SCANF           shift, and go to state 10
    SEMICOLON       shift, and go to state 11
    IDENTIFIER      shift, and go to state 13

    $default  reduce using rule 1 (program)

    statement      go to state 46
    function_decl  go to state 17
    function_def   go to state 18
    function_use   go to state 19
    printf         go to state 20
    scanf          go to state 21
    while          go to state 22
    if_else        go to state 23
    declaration    go to state 24
    assign         go to state 25
    T              go to state 26


State 16

    2 statements: statement .

    $default  reduce using rule 2 (statements)


State 17

   13 statement: function_decl . SEMICOLON

    SEMICOLON  shift, and go to state 47


State 18

   14 statement: function_def .

    $default  reduce using rule 14 (statement)


State 19

   15 statement: function_use . SEMICOLON

    SEMICOLON  shift, and go to state 48


State 20

   11 statement: printf . SEMICOLON

    SEMICOLON  shift, and go to state 49


State 21

   12 statement: scanf . SEMICOLON

    SEMICOLON  shift, and go to state 50


State 22

   10 statement: while .

    $default  reduce using rule 10 (statement)


State 23

    9 statement: if_else .

    $default  reduce using rule 9 (statement)


State 24

    7 statement: declaration . SEMICOLON

    SEMICOLON  shift, and go to state 51


State 25

    8 statement: assign . SEMICOLON

    SEMICOLON  shift, and go to state 52


State 26

   16 function_decl: T . IDENTIFIER LPAREN RPAREN
   17              | T . IDENTIFIER LPAREN params RPAREN
   18 function_def: T . IDENTIFIER LPAREN params RPAREN LBRACE statements RBRACE
   45 declaration: T . assigns
   46            | T . idlist

    IDENTIFIER  shift, and go to state 53

    assigns  go to state 54
    assign   go to state 55
    idlist   go to state 56


State 27

   33 bool_statements: LPAREN . bool_statements RPAREN
   54 expr: LPAREN . expr RPAREN

    LPAREN      shift, and go to state 27
    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 29
    CHAR        shift, and go to state 30
    STRING      shift, and go to state 31
    ADD         shift, and go to state 32
    SUB         shift, and go to state 33
    NOT         shift, and go to state 34

    bool_statements  go to state 57
    bool_statement   go to state 36
    expr             go to state 58


State 28

   62 expr: IDENTIFIER .

    $default  reduce using rule 62 (expr)


State 29

   63 expr: INTEGER .

    $default  reduce using rule 63 (expr)


State 30

   64 expr: CHAR .

    $default  reduce using rule 64 (expr)


State 31

   65 expr: STRING .

    $default  reduce using rule 65 (expr)


State 32

   58 expr: ADD . expr

    LPAREN      shift, and go to state 59
    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 29
    CHAR        shift, and go to state 30
    STRING      shift, and go to state 31
    ADD         shift, and go to state 32
    SUB         shift, and go to state 33

    expr  go to state 60


State 33

   57 expr: SUB . expr

    LPAREN      shift, and go to state 59
    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 29
    CHAR        shift, and go to state 30
    STRING      shift, and go to state 31
    ADD         shift, and go to state 32
    SUB         shift, and go to state 33

    expr  go to state 61


State 34

   36 bool_statements: NOT . bool_statements

    LPAREN      shift, and go to state 27
    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 29
    CHAR        shift, and go to state 30
    STRING      shift, and go to state 31
    ADD         shift, and go to state 32
    SUB         shift, and go to state 33
    NOT         shift, and go to state 34

    bool_statements  go to state 62
    bool_statement   go to state 36
    expr             go to state 37


State 35

   31 if_else: IF bool_statements . statements ELSE statements
   32        | IF bool_statements . statement
   34 bool_statements: bool_statements . AND bool_statements
   35                | bool_statements . OR bool_statements

    IF              shift, and go to state 1
    WHILE           shift, and go to state 2
    T_CHAR          shift, and go to state 3
    T_INT           shift, and go to state 4
    T_STRING        shift, and go to state 5
    T_BOOL          shift, and go to state 6
    T_INT_POINTER   shift, and go to state 7
    T_CHAR_POINTER  shift, and go to state 8
    PRINTF          shift, and go to state 9
    SCANF           shift, and go to state 10
    SEMICOLON       shift, and go to state 11
    LBRACE          shift, and go to state 12
    IDENTIFIER      shift, and go to state 13
    OR              shift, and go to state 63
    AND             shift, and go to state 64

    statements     go to state 65
    statement      go to state 66
    function_decl  go to state 17
    function_def   go to state 18
    function_use   go to state 19
    printf         go to state 20
    scanf          go to state 21
    while          go to state 22
    if_else        go to state 23
    declaration    go to state 24
    assign         go to state 25
    T              go to state 26


State 36

   37 bool_statements: bool_statement .
   39 bool_statement: bool_statement . GREAT bool_statement
   40               | bool_statement . LESS bool_statement
   41               | bool_statement . GREAT_EQ bool_statement
   42               | bool_statement . LESS_EQ bool_statement
   43               | bool_statement . LOP_EQ bool_statement
   44               | bool_statement . NOT_EQ bool_statement

    LOP_EQ    shift, and go to state 67
    GREAT     shift, and go to state 68
    LESS      shift, and go to state 69
    GREAT_EQ  shift, and go to state 70
    LESS_EQ   shift, and go to state 71
    NOT_EQ    shift, and go to state 72

    $default  reduce using rule 37 (bool_statements)


State 37

   38 bool_statement: expr .
   55 expr: expr . ADD expr
   56     | expr . SUB expr
   59     | expr . MUL expr
   60     | expr . DIV expr
   61     | expr . MOD expr

    ADD  shift, and go to state 73
    SUB  shift, and go to state 74
    MUL  shift, and go to state 75
    DIV  shift, and go to state 76
    MOD  shift, and go to state 77

    $default  reduce using rule 38 (bool_statement)


State 38

   30 while: WHILE bool_statements . statements
   34 bool_statements: bool_statements . AND bool_statements
   35                | bool_statements . OR bool_statements

    IF              shift, and go to state 1
    WHILE           shift, and go to state 2
    T_CHAR          shift, and go to state 3
    T_INT           shift, and go to state 4
    T_STRING        shift, and go to state 5
    T_BOOL          shift, and go to state 6
    T_INT_POINTER   shift, and go to state 7
    T_CHAR_POINTER  shift, and go to state 8
    PRINTF          shift, and go to state 9
    SCANF           shift, and go to state 10
    SEMICOLON       shift, and go to state 11
    LBRACE          shift, and go to state 12
    IDENTIFIER      shift, and go to state 13
    OR              shift, and go to state 63
    AND             shift, and go to state 64

    statements     go to state 78
    statement      go to state 16
    function_decl  go to state 17
    function_def   go to state 18
    function_use   go to state 19
    printf         go to state 20
    scanf          go to state 21
    while          go to state 22
    if_else        go to state 23
    declaration    go to state 24
    assign         go to state 25
    T              go to state 26


State 39

   24 printf: PRINTF LPAREN . STRING RPAREN
   25       | PRINTF LPAREN . STRING COMMA exprs RPAREN

    STRING  shift, and go to state 79


State 40

   26 scanf: SCANF LPAREN . STRING COMMA address_idlist RPAREN

    STRING  shift, and go to state 80


State 41

    5 statements: LBRACE RBRACE .

    $default  reduce using rule 5 (statements)


State 42

    3 statements: statements . statement
    4           | LBRACE statements . RBRACE

    IF              shift, and go to state 1
    WHILE           shift, and go to state 2
    T_CHAR          shift, and go to state 3
    T_INT           shift, and go to state 4
    T_STRING        shift, and go to state 5
    T_BOOL          shift, and go to state 6
    T_INT_POINTER   shift, and go to state 7
    T_CHAR_POINTER  shift, and go to state 8
    PRINTF          shift, and go to state 9
    SCANF           shift, and go to state 10
    SEMICOLON       shift, and go to state 11
    RBRACE          shift, and go to state 81
    IDENTIFIER      shift, and go to state 13

    statement      go to state 46
    function_decl  go to state 17
    function_def   go to state 18
    function_use   go to state 19
    printf         go to state 20
    scanf          go to state 21
    while          go to state 22
    if_else        go to state 23
    declaration    go to state 24
    assign         go to state 25
    T              go to state 26


State 43

   49 assign: IDENTIFIER LOP_ASSIGN . expr

    LPAREN      shift, and go to state 59
    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 29
    CHAR        shift, and go to state 30
    STRING      shift, and go to state 31
    ADD         shift, and go to state 32
    SUB         shift, and go to state 33

    expr  go to state 82


State 44

   19 function_use: IDENTIFIER LPAREN . idlist RPAREN
   20             | IDENTIFIER LPAREN . RPAREN

    RPAREN      shift, and go to state 83
    IDENTIFIER  shift, and go to state 84

    idlist  go to state 85


State 45

    0 $accept: program $end .

    $default  accept


State 46

    3 statements: statements statement .

    $default  reduce using rule 3 (statements)


State 47

   13 statement: function_decl SEMICOLON .

    $default  reduce using rule 13 (statement)


State 48

   15 statement: function_use SEMICOLON .

    $default  reduce using rule 15 (statement)


State 49

   11 statement: printf SEMICOLON .

    $default  reduce using rule 11 (statement)


State 50

   12 statement: scanf SEMICOLON .

    $default  reduce using rule 12 (statement)


State 51

    7 statement: declaration SEMICOLON .

    $default  reduce using rule 7 (statement)


State 52

    8 statement: assign SEMICOLON .

    $default  reduce using rule 8 (statement)


State 53

   16 function_decl: T IDENTIFIER . LPAREN RPAREN
   17              | T IDENTIFIER . LPAREN params RPAREN
   18 function_def: T IDENTIFIER . LPAREN params RPAREN LBRACE statements RBRACE
   49 assign: IDENTIFIER . LOP_ASSIGN expr
   51 idlist: IDENTIFIER .

    LOP_ASSIGN  shift, and go to state 43
    LPAREN      shift, and go to state 86

    $default  reduce using rule 51 (idlist)


State 54

   45 declaration: T assigns .
   47 assigns: assigns . COMMA assign

    COMMA  shift, and go to state 87

    $default  reduce using rule 45 (declaration)


State 55

   48 assigns: assign .

    $default  reduce using rule 48 (assigns)


State 56

   46 declaration: T idlist .
   50 idlist: idlist . COMMA IDENTIFIER

    COMMA  shift, and go to state 88

    $default  reduce using rule 46 (declaration)


State 57

   33 bool_statements: LPAREN bool_statements . RPAREN
   34                | bool_statements . AND bool_statements
   35                | bool_statements . OR bool_statements

    RPAREN  shift, and go to state 89
    OR      shift, and go to state 63
    AND     shift, and go to state 64


State 58

   38 bool_statement: expr .
   54 expr: LPAREN expr . RPAREN
   55     | expr . ADD expr
   56     | expr . SUB expr
   59     | expr . MUL expr
   60     | expr . DIV expr
   61     | expr . MOD expr

    RPAREN  shift, and go to state 90
    ADD     shift, and go to state 73
    SUB     shift, and go to state 74
    MUL     shift, and go to state 75
    DIV     shift, and go to state 76
    MOD     shift, and go to state 77

    RPAREN    [reduce using rule 38 (bool_statement)]
    $default  reduce using rule 38 (bool_statement)


State 59

   54 expr: LPAREN . expr RPAREN

    LPAREN      shift, and go to state 59
    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 29
    CHAR        shift, and go to state 30
    STRING      shift, and go to state 31
    ADD         shift, and go to state 32
    SUB         shift, and go to state 33

    expr  go to state 91


State 60

   55 expr: expr . ADD expr
   56     | expr . SUB expr
   58     | ADD expr .
   59     | expr . MUL expr
   60     | expr . DIV expr
   61     | expr . MOD expr

    $default  reduce using rule 58 (expr)


State 61

   55 expr: expr . ADD expr
   56     | expr . SUB expr
   57     | SUB expr .
   59     | expr . MUL expr
   60     | expr . DIV expr
   61     | expr . MOD expr

    $default  reduce using rule 57 (expr)


State 62

   34 bool_statements: bool_statements . AND bool_statements
   35                | bool_statements . OR bool_statements
   36                | NOT bool_statements .

    $default  reduce using rule 36 (bool_statements)


State 63

   35 bool_statements: bool_statements OR . bool_statements

    LPAREN      shift, and go to state 27
    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 29
    CHAR        shift, and go to state 30
    STRING      shift, and go to state 31
    ADD         shift, and go to state 32
    SUB         shift, and go to state 33
    NOT         shift, and go to state 34

    bool_statements  go to state 92
    bool_statement   go to state 36
    expr             go to state 37


State 64

   34 bool_statements: bool_statements AND . bool_statements

    LPAREN      shift, and go to state 27
    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 29
    CHAR        shift, and go to state 30
    STRING      shift, and go to state 31
    ADD         shift, and go to state 32
    SUB         shift, and go to state 33
    NOT         shift, and go to state 34

    bool_statements  go to state 93
    bool_statement   go to state 36
    expr             go to state 37


State 65

    3 statements: statements . statement
   31 if_else: IF bool_statements statements . ELSE statements

    IF              shift, and go to state 1
    ELSE            shift, and go to state 94
    WHILE           shift, and go to state 2
    T_CHAR          shift, and go to state 3
    T_INT           shift, and go to state 4
    T_STRING        shift, and go to state 5
    T_BOOL          shift, and go to state 6
    T_INT_POINTER   shift, and go to state 7
    T_CHAR_POINTER  shift, and go to state 8
    PRINTF          shift, and go to state 9
    SCANF           shift, and go to state 10
    SEMICOLON       shift, and go to state 11
    IDENTIFIER      shift, and go to state 13

    statement      go to state 46
    function_decl  go to state 17
    function_def   go to state 18
    function_use   go to state 19
    printf         go to state 20
    scanf          go to state 21
    while          go to state 22
    if_else        go to state 23
    declaration    go to state 24
    assign         go to state 25
    T              go to state 26


State 66

    2 statements: statement .
   32 if_else: IF bool_statements statement .

    $end            reduce using rule 32 (if_else)
    IF              reduce using rule 2 (statements)
    IF              [reduce using rule 32 (if_else)]
    ELSE            reduce using rule 2 (statements)
    ELSE            [reduce using rule 32 (if_else)]
    WHILE           reduce using rule 2 (statements)
    WHILE           [reduce using rule 32 (if_else)]
    T_CHAR          reduce using rule 2 (statements)
    T_CHAR          [reduce using rule 32 (if_else)]
    T_INT           reduce using rule 2 (statements)
    T_INT           [reduce using rule 32 (if_else)]
    T_STRING        reduce using rule 2 (statements)
    T_STRING        [reduce using rule 32 (if_else)]
    T_BOOL          reduce using rule 2 (statements)
    T_BOOL          [reduce using rule 32 (if_else)]
    T_INT_POINTER   reduce using rule 2 (statements)
    T_INT_POINTER   [reduce using rule 32 (if_else)]
    T_CHAR_POINTER  reduce using rule 2 (statements)
    T_CHAR_POINTER  [reduce using rule 32 (if_else)]
    PRINTF          reduce using rule 2 (statements)
    PRINTF          [reduce using rule 32 (if_else)]
    SCANF           reduce using rule 2 (statements)
    SCANF           [reduce using rule 32 (if_else)]
    SEMICOLON       reduce using rule 2 (statements)
    SEMICOLON       [reduce using rule 32 (if_else)]
    RBRACE          reduce using rule 32 (if_else)
    IDENTIFIER      reduce using rule 2 (statements)
    IDENTIFIER      [reduce using rule 32 (if_else)]
    $default        reduce using rule 2 (statements)


State 67

   43 bool_statement: bool_statement LOP_EQ . bool_statement

    LPAREN      shift, and go to state 59
    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 29
    CHAR        shift, and go to state 30
    STRING      shift, and go to state 31
    ADD         shift, and go to state 32
    SUB         shift, and go to state 33

    bool_statement  go to state 95
    expr            go to state 37


State 68

   39 bool_statement: bool_statement GREAT . bool_statement

    LPAREN      shift, and go to state 59
    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 29
    CHAR        shift, and go to state 30
    STRING      shift, and go to state 31
    ADD         shift, and go to state 32
    SUB         shift, and go to state 33

    bool_statement  go to state 96
    expr            go to state 37


State 69

   40 bool_statement: bool_statement LESS . bool_statement

    LPAREN      shift, and go to state 59
    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 29
    CHAR        shift, and go to state 30
    STRING      shift, and go to state 31
    ADD         shift, and go to state 32
    SUB         shift, and go to state 33

    bool_statement  go to state 97
    expr            go to state 37


State 70

   41 bool_statement: bool_statement GREAT_EQ . bool_statement

    LPAREN      shift, and go to state 59
    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 29
    CHAR        shift, and go to state 30
    STRING      shift, and go to state 31
    ADD         shift, and go to state 32
    SUB         shift, and go to state 33

    bool_statement  go to state 98
    expr            go to state 37


State 71

   42 bool_statement: bool_statement LESS_EQ . bool_statement

    LPAREN      shift, and go to state 59
    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 29
    CHAR        shift, and go to state 30
    STRING      shift, and go to state 31
    ADD         shift, and go to state 32
    SUB         shift, and go to state 33

    bool_statement  go to state 99
    expr            go to state 37


State 72

   44 bool_statement: bool_statement NOT_EQ . bool_statement

    LPAREN      shift, and go to state 59
    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 29
    CHAR        shift, and go to state 30
    STRING      shift, and go to state 31
    ADD         shift, and go to state 32
    SUB         shift, and go to state 33

    bool_statement  go to state 100
    expr            go to state 37


State 73

   55 expr: expr ADD . expr

    LPAREN      shift, and go to state 59
    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 29
    CHAR        shift, and go to state 30
    STRING      shift, and go to state 31
    ADD         shift, and go to state 32
    SUB         shift, and go to state 33

    expr  go to state 101


State 74

   56 expr: expr SUB . expr

    LPAREN      shift, and go to state 59
    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 29
    CHAR        shift, and go to state 30
    STRING      shift, and go to state 31
    ADD         shift, and go to state 32
    SUB         shift, and go to state 33

    expr  go to state 102


State 75

   59 expr: expr MUL . expr

    LPAREN      shift, and go to state 59
    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 29
    CHAR        shift, and go to state 30
    STRING      shift, and go to state 31
    ADD         shift, and go to state 32
    SUB         shift, and go to state 33

    expr  go to state 103


State 76

   60 expr: expr DIV . expr

    LPAREN      shift, and go to state 59
    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 29
    CHAR        shift, and go to state 30
    STRING      shift, and go to state 31
    ADD         shift, and go to state 32
    SUB         shift, and go to state 33

    expr  go to state 104


State 77

   61 expr: expr MOD . expr

    LPAREN      shift, and go to state 59
    IDENTIFIER  shift, and go to state 28
    INTEGER     shift, and go to state 29
    CHAR        shift, and go to state 30
    STRING      shift, and go to state 31
    ADD         shift, and go to state 32
    SUB         shift, and go to state 33

    expr  go to state 105


State 78

    3 statements: statements . statement
   30 while: WHILE bool_statements statements .

    IF              shift, and go to state 1
    WHILE           shift, and go to state 2
    T_CHAR          shift, and go to state 3
    T_INT           shift, and go to state 4
    T_STRING        shift, and go to state 5
    T_BOOL          shift, and go to state 6
    T_INT_POINTER   shift, and go to state 7
    T_CHAR_POINTER  shift, and go to state 8
    PRINTF          shift, and go to state 9
    SCANF           shift, and go to state 10
    SEMICOLON       shift, and go to state 11
    IDENTIFIER      shift, and go to state 13

    IF              [reduce using rule 30 (while)]
    WHILE           [reduce using rule 30 (while)]
    T_CHAR          [reduce using rule 30 (while)]
    T_INT           [reduce using rule 30 (while)]
    T_STRING        [reduce using rule 30 (while)]
    T_BOOL          [reduce using rule 30 (while)]
    T_INT_POINTER   [reduce using rule 30 (while)]
    T_CHAR_POINTER  [reduce using rule 30 (while)]
    PRINTF          [reduce using rule 30 (while)]
    SCANF           [reduce using rule 30 (while)]
    SEMICOLON       [reduce using rule 30 (while)]
    IDENTIFIER      [reduce using rule 30 (while)]
    $default        reduce using rule 30 (while)

    statement      go to state 46
    function_decl  go to state 17
    function_def   go to state 18
    function_use   go to state 19
    printf         go to state 20
    scanf          go to state 21
    while          go to state 22
    if_else        go to state 23
    declaration    go to state 24
    assign         go to state 25
    T              go to state 26


State 79

   24 printf: PRINTF LPAREN STRING . RPAREN
   25       | PRINTF LPAREN STRING . COMMA exprs RPAREN

    COMMA   shift, and go to state 106
    RPAREN  shift, and go to state 107


State 80

   26 scanf: SCANF LPAREN STRING . COMMA address_idlist RPAREN

    COMMA  shift, and go to state 108


State 81

    4 statements: LBRACE statements RBRACE .

    $default  reduce using rule 4 (statements)


State 82

   49 assign: IDENTIFIER LOP_ASSIGN expr .
   55 expr: expr . ADD expr
   56     | expr . SUB expr
   59     | expr . MUL expr
   60     | expr . DIV expr
   61     | expr . MOD expr

    ADD  shift, and go to state 73
    SUB  shift, and go to state 74
    MUL  shift, and go to state 75
    DIV  shift, and go to state 76
    MOD  shift, and go to state 77

    $default  reduce using rule 49 (assign)


State 83

   20 function_use: IDENTIFIER LPAREN RPAREN .

    $default  reduce using rule 20 (function_use)


State 84

   51 idlist: IDENTIFIER .

    $default  reduce using rule 51 (idlist)


State 85

   19 function_use: IDENTIFIER LPAREN idlist . RPAREN
   50 idlist: idlist . COMMA IDENTIFIER

    COMMA   shift, and go to state 88
    RPAREN  shift, and go to state 109


State 86

   16 function_decl: T IDENTIFIER LPAREN . RPAREN
   17              | T IDENTIFIER LPAREN . params RPAREN
   18 function_def: T IDENTIFIER LPAREN . params RPAREN LBRACE statements RBRACE

    T_CHAR          shift, and go to state 3
    T_INT           shift, and go to state 4
    T_STRING        shift, and go to state 5
    T_BOOL          shift, and go to state 6
    T_INT_POINTER   shift, and go to state 7
    T_CHAR_POINTER  shift, and go to state 8
    RPAREN          shift, and go to state 110

    params  go to state 111
    param   go to state 112
    T       go to state 113


State 87

   47 assigns: assigns COMMA . assign

    IDENTIFIER  shift, and go to state 114

    assign  go to state 115


State 88

   50 idlist: idlist COMMA . IDENTIFIER

    IDENTIFIER  shift, and go to state 116


State 89

   33 bool_statements: LPAREN bool_statements RPAREN .

    $default  reduce using rule 33 (bool_statements)


State 90

   54 expr: LPAREN expr RPAREN .

    $default  reduce using rule 54 (expr)


State 91

   54 expr: LPAREN expr . RPAREN
   55     | expr . ADD expr
   56     | expr . SUB expr
   59     | expr . MUL expr
   60     | expr . DIV expr
   61     | expr . MOD expr
